crates/satchel/tests/compile_fail/common.rs
#![allow(dead_code)]
#[allow(unused_imports)]
use satchel as _satchel_reexport_silence;
#[allow(unused_imports)]
use linkme as _linkme_silence;
fn main() {}
